<resources>
    <string name="app_name">StyleS</string>
    <string name="title_activity_navigation_drawer">activity_navigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="navigation_drawer_menuItem_communicate">Communicate</string>
    <string name="navigation_drawer_menuItem_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="edit_email">Enter the Email</string>
    <string name="edit_password">Enter the Password</string>
    <string name="error_emptyEMAIL">Please enter your email!</string>
    <string name="error_emptyPW">Please enter your password!</string>
    <string name="button_login">Login</string>
    <string name="error_emailORpw">Invalid credentials!</string>
    <string name="error_3attempts">Too many attempts. Try again in %ds.</string>
    <string name="error_emptyEMAILandPW">Please enter the email and password!</string>
    <string name="edit_newfirstName">Enter Your First Name *</string>
    <string name="edit_newLastName">Enter Your Last Name</string>
    <string name="edit_newEmail">Enter E-mail *</string>
    <string name="edit_newPassword">Enter a Password *</string>
    <string name="edit_confirmNewPassword">Confirm Password *</string>
    <string name="error_emptyFields">Field cannot be empty!</string>
    <string name="error_existingUser">An account already exists by this name and email!</string>
    <string name="error_PWunmatch">Passwords you entered do not match!</string>
    <string name="title_activity_register">activity_register</string>
    <string name="textView_registerScreen_createAccount">No account? Create one!</string>
    <string name="button_register">Register</string>
    <string name="grid_placeholderItemImage">Item Image</string>
    <string name="grid_placeholderItemName">Item Name</string>
    <string name="grid_placeholderItemPrice">Item Price</string>
    <string name="textView_registerScreen_changePassword">Forgot Password?</string>
    <string name="edit_registeredEmail">Enter your registered email</string>
    <string name="edit_oldPassword">Enter your old password</string>
    <string name="edit_changedPassword">Enter a new password</string>
    <string name="edit_confirmChangedPassword">Confirm new password</string>
    <string name="button_changePassword">Save changes</string>
    <string name="fragmentTitle_Home">Home</string>
    <string name="fragmentTitle_changePassword">Change Password</string>
    <string name="fragmentTitle_cart">Shopping Cart</string>
    <string name="fragmentTitle_favourites">Favourites</string>
    <string name="fragmentTitle_categories">Categories</string>
    <string name="fragmentElement_textView_favourites">Add to favourites</string>
    <string name="fragmentElement_button_buy">Buy it now</string>
    <string name="fragmentElement_button_addToCart">Add to cart</string>
</resources>
