<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_gridImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:contentDescription="@string/grid_placeholderItemImage"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:background="@drawable/image_corners" />

    <TextView
        android:id="@+id/textView_gridItemPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/grid_placeholderItemPrice"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView_gridItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/grid_placeholderItemName"
        android:textColor="@android:color/black" />
</LinearLayout>
